[tool.poetry]
name = "expense-tracker"
version = "0.1.0"
description = "Budget and Expense Tracker"
authors = ["Nicholas Lawhon <nicholaslawhon09@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.31"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
