[tool.poetry]
name = "expense-tracker"
version = "0.1.0"
description = "Budget and Expense Tracker"
authors = ["Nicholas Lawhon <nicholaslawhon09@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.31"
requests = "^2.32.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
    "C:\\Users\\nicho\\OneDrive\\Documents\\Projects\\Finance\\Expense Tracker",
    "C:\\Users\\nicho\\OneDrive\\Documents\\Projects\\Finance\\Expense Tracker\\expense_tracker"
]
addopts = "--strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "serial",
]
filterwarnings = ["ignore::DeprecationWarning:pytest_mock.*"]

[tool.mypy]
python_version = "3.12"

minversion = "6.0"
required_plugins = ["pytest-mock"]
